--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -271,6 +271,40 @@ DT::datatable(
 ) 
 ```
 
+## Remapping
+
+```{r}
+search_terms = "remapping"
+bib_remapping = bib %>%
+  .[, ":="(abstract_lower = tolower(abstract), title_lower = tolower(title))] %>%
+  # search for search terms in title and abstract
+  filter_at(
+    .vars = vars(abstract_lower, title_lower, tags),
+    .vars_predicate = any_vars(
+      stringr::str_detect(
+        string = .,
+        pattern = paste(search_terms, collapse = "|")))) %>%
+  setDT(.) %>%
+  .[,c("ID", "title", "author", "year", "journal", "url")]
+```
+
+In this section, I filter publications in the `bibliography.bib` file for papers on **remapping** in the hippocampus.
+The matching papers are listed in Figure \@ref(fig:remapping).
+The filter searches for the keyword `remapping` in the `title`, `abstract` or `tags` of the bibliography entries.
+`r nrow(bib_remapping)` matching papers were found.
+
+```{r, remapping, fig.cap="Table listing bibliography entries containing `remapping`"}
+DT::datatable(
+  data = bib_remapping,
+  class = "cell-border stripe", rownames = FALSE, escape = FALSE,
+  options = list(
+    scrollX = TRUE,
+    pageLength = 5,
+    lengthMenu = c(5, 10, 15, 20)
+  ),
+) 
+```
+
 ## Missing PDFs
 
 Figure \@ref(fig:missing-pdfs) lists all publications with missing PDFs.
