--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -121,6 +121,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{TI}{TI}{inversion time}
 \newacronym{TMR}{TMR}{targeted memory reactivation}
 \newacronym{TR}{TR}{repetition time}
+\newacronym{VAE}{VAE}{variational autoencoder}
 \newacronym{VS}{VS}{ventral striatum}
 \newacronym{VTA}{VTA}{ventral tegmental area}
 \newacronym{VTE}{VTE}{vicarious trial and error}
