add long-term support (LTS) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -65,6 +65,7 @@
 \newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
 \newacronym{LTP}{LTP}{long-term potentiation}
+\newacronym{LTS}{LTS}{long-term support}
 \newacronym{MB}{MB}{multi-band}
 \newacronym{MDP}{MDP}{Markov decision process}
 \newacronym{MEG}{MEG}{magnetoencephalography}
