--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -305,6 +305,40 @@ DT::datatable(
 ) 
 ```
 
+## Representation (learning)
+
+```{r}
+search_terms = "representation"
+bib_representation = bib %>%
+  .[, ":="(abstract_lower = tolower(abstract), title_lower = tolower(title))] %>%
+  # search for search terms in title and abstract
+  filter_at(
+    .vars = vars(tags),
+    .vars_predicate = any_vars(
+      stringr::str_detect(
+        string = .,
+        pattern = paste(search_terms, collapse = "|")))) %>%
+  setDT(.) %>%
+  .[,c("ID", "title", "author", "year", "journal", "url")]
+```
+
+In this section, I filter publications in the `bibliography.bib` file for papers on **representations** and **representation learning**.
+The matching papers are listed in Figure \@ref(fig:representation).
+The filter searches for the keyword `representation` in the `tags` of the bibliography entries.
+`r nrow(bib_representation)` matching papers were found.
+
+```{r, representation, fig.cap="Table listing bibliography entries containing `representation` in the `tags` field"}
+DT::datatable(
+  data = bib_representation,
+  class = "cell-border stripe", rownames = FALSE, escape = FALSE,
+  options = list(
+    scrollX = TRUE,
+    pageLength = 5,
+    lengthMenu = c(5, 10, 15, 20)
+  ),
+) 
+```
+
 ## Missing PDFs
 
 Figure \@ref(fig:missing-pdfs) lists all publications with missing PDFs.
