--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -341,6 +341,37 @@ DT::datatable(
 ) 
 ```
 
+## Zoo
+
+```{r}
+search_terms = "zoo"
+bib_zoo = bib %>%
+  # search for search terms in title and abstract
+  filter_at(
+    .vars = vars(tags),
+    .vars_predicate = any_vars(
+      stringr::str_detect(
+        string = .,
+        pattern = paste(search_terms, collapse = "|")))) %>%
+  setDT(.) %>%
+  .[,c("ID", "title", "author", "year", "journal", "url")]
+```
+
+Figure \@ref(fig:zoo) shows relevant references for the Zoo project.
+
+```{r, zoo, fig.cap="Table listing bibliography entries containing `zoo` in the `tags` field"}
+DT::datatable(
+  data = bib_zoo,
+  class = "cell-border stripe", rownames = FALSE, escape = FALSE,
+  options = list(
+    scrollX = TRUE,
+    pageLength = 5,
+    lengthMenu = c(5, 10, 15, 20)
+  ),
+) 
+```
+
+
 ## Missing PDFs
 
 Figure \@ref(fig:missing-pdfs) lists all publications with missing PDFs.
