add stimulus-response interval (SRI) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -113,6 +113,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{SOA}{SOA}{stimulus onset asynchrony}
 \newacronym{SR}{SR}{successor representation}
+\newacronym{SRI}{SRI}{stimulus-response interval}
 \newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{STDP}{STDP}{spike timing dependent plasticity}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
