add anterior commissure - posterior commissure (AC-PC) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -1,3 +1,4 @@
+\newacronym{AC-PC}{AC-PC}{anterior commissure - posterior commissure}
 \newacronym{AI}{AI}{artificial intelligence}
 \newacronym{ANTs}{ANTs}{Advanced Normalization Tools}
 \newacronym{ANN}{ANN}{artificial neural network}
