add recurrent neural network (RNN) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -93,6 +93,7 @@ description={Post-traumatic stress disorder (PTSD) is a mental disorder that can
 first={post traumatic stress disorder (PTSD)}
 }
 \newacronym{REM}{REM}{rapid eye movement}
+\newacronym{RNN}{RNN}{recurrent neural network}
 \newglossaryentry{ROI}
 {
   name={ROI},
