--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -65,6 +65,7 @@
 \newacronym{KL}{KL}{Kullback-Leibler}
 \newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
+\newacronym{LSTM}{LSTM}{long short-term memory}
 \newacronym{LTP}{LTP}{long-term potentiation}
 \newacronym{LTS}{LTS}{long-term support}
 \newacronym{MB}{MB}{multi-band}
