add ICML and NeurIPS abbreviations

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -55,6 +55,7 @@
   firstplural={\glsentrydescplural{HRF} (\glsentryplural{HRF})}
 }
 \newacronym{HSD}{HSD}{honest significant difference}
+\newacronym{ICML}{ICML}{International Conference on Machine Learning}
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{i.i.d.}{i.i.d.}{independent and identically distributed}
 \newacronym{INU}{INU}{intensity non-uniformity}
@@ -82,6 +83,7 @@
 \newacronym{MTurk}{MTurk}{Amazon Mechanical Turk}
 \newacronym{MVPA}{MVPA}{multi-voxel pattern analysis}
 \newacronym{NA}{NA}{noradrenaline}
+\newacronym{NeurIPS}{NeurIPS}{Conference on Neural Information Processing Systems}
 \newacronym{NOUN}{NOUN}{Novel Object and Unusual Name}
 \newacronym{NREM}{NREM}{non-rapid eye movement}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
