add Physiological Measurement Unit (PMU) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -90,6 +90,7 @@
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
 \newacronym{PE}{PE}{prediction error}
 \newacronym{PFC}{PFC}{prefrontal cortex}
+\newacronym{PMU}{PMU}{Physiological Measurement Unit}
 \newglossaryentry{PTSD}{
 name={PTSD},
 description={Post-traumatic stress disorder (PTSD) is a mental disorder that can develop after a person is exposed to a traumatic event, such as sexual assault, and can include a variety of symptoms like disturbing thoughts, feelings, and re-experiencing trauma-related events},
