add SUSAN (Smallest Univalue Segment Assimilating Nucleus) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -122,6 +122,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{SRI}{SRI}{stimulus-response interval}
 \newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{STDP}{STDP}{spike timing dependent plasticity}
+\newacronym{SUSAN}{SUSAN}{Smallest Univalue Segment Assimilating Nucleus}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
 \newacronym{TD}{TD}{temporal difference}
