add DICOM (Digital Imaging and Communications in Medicine) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -12,6 +12,7 @@
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
 \newacronym{DA}{DA}{dopamine}
 \newacronym{DGPs}{DGPs}{German Psychological Society}
+\newacronym{DICOM}{DICOM}{Digital Imaging and Communications in Medicine}
 \newacronym{DMN}{DMN}{default mode network}
 \newacronym{DNN}{DNN}{deep neural network}
 \newacronym{DOI}{DOI}{Digital Object Identifier}
