add high performance computing (HPC) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -46,6 +46,7 @@
 \newacronym{GRAPPA}{GRAPPA}{GeneRalized Autocalibrating Partial Parallel Acquisition}
 \newacronym{HIT}{HIT}{Human Intelligence Task}
 \newacronym{Hz}{Hz}{Hertz}
+\newacronym{HPC}{HPC}{high performance computing}
 \newglossaryentry{HRF}
 {
   name={HRF},
