CI: edit badge with build status

--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -18,7 +18,7 @@ fig.align: "center"
 email: wittkuhn@mpib-berlin.mpg.de
 ---
 
-[![Build Status](https://travis-ci.com/lnnrtwttkhn/bibliography.svg?branch=master)](https://travis-ci.com/lnnrtwttkhn/bibliography)
+[![Build Status](https://app.travis-ci.com/lnnrtwttkhn/bibliography.svg?branch=master)](https://app.travis-ci.com/lnnrtwttkhn/bibliography)
 
 ```{r, warning=FALSE, message=FALSE, results='hide', echo=FALSE}
 if (!requireNamespace("pacman")) install.packages("pacman")
