--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -78,8 +78,8 @@
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
 \newacronym{MPIB}{MPIB}{Max Planck Institute for Human Development}
 \newacronym{MRI}{MRI}{magnetic resonance imaging}
-\newacronym{ms}{ms}{millisecond}
-\newacronym{min}{min}{minute}
+\newacronym[plural=ms,firstplural=milliseconds (ms)]{ms}{ms}{millisecond}
+\newacronym[plural=min,firstplural=minutes (min)]{min}{min}{minute}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
 \newacronym{MTL}{MTL}{medial temporal lobe}
 \newacronym{MTurk}{MTurk}{Amazon Mechanical Turk}
@@ -113,7 +113,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{RPE}{RPE}{reward prediction error}
 \newacronym{RS}{RS}{repetition suppression}
 \newacronym{RSA}{RSA}{representational similarity analysis}
-\newacronym{s}{s}{second}
+\newacronym[plural=s,firstplural=seconds (s)]{s}{s}{second}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
 \newacronym{SGD}{SGD}{stochastic gradient descent}
