add interquartile range (IQR) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -61,6 +61,7 @@
 \newacronym{iEEG}{iEEG}{intracranial electroencephalography}
 \newacronym{i.i.d.}{i.i.d.}{independent and identically distributed}
 \newacronym{INU}{INU}{intensity non-uniformity}
+\newacronym{IQR}{IQR}{interquartile range}
 \newacronym{IRB}{IRB}{institutional review board}
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{IT}{IT}{information technology}
