add hidden markov model (HMM) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -45,6 +45,7 @@
 \newacronym{GR}{GR}{gradient recalled}
 \newacronym{GRAPPA}{GRAPPA}{GeneRalized Autocalibrating Partial Parallel Acquisition}
 \newacronym{HIT}{HIT}{Human Intelligence Task}
+\newacronym{HMM}{HMM}{hidden markov model}
 \newacronym{Hz}{Hz}{Hertz}
 \newacronym{HPC}{HPC}{high performance computing}
 \newglossaryentry{HRF}
