add Akaike information criterion (AIC) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -1,5 +1,6 @@
 \newacronym{AC-PC}{AC-PC}{anterior commissure - posterior commissure}
 \newacronym{AI}{AI}{artificial intelligence}
+\newacronym{AIC}{AIC}{Akaike information criterion}
 \newacronym{ANTs}{ANTs}{Advanced Normalization Tools}
 \newacronym{ANN}{ANN}{artificial neural network}
 \newacronym{ANOVA}{ANOVA}{analysis of variance}
