add optically pumped magnometer (OPM) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -93,6 +93,8 @@
 \newacronym{NREM}{NREM}{non-rapid eye movement}
 \newacronym{OCD}{OCD}{obsessive-compulsive disorder}
 \newacronym{OFC}{OFC}{orbitofrontal cortex}
+\newacronym{OPM}{OPM}{optically pumped magneto-
+meter}
 \newacronym{PE}{PE}{prediction error}
 \newacronym{PFC}{PFC}{prefrontal cortex}
 \newacronym{PMU}{PMU}{Physiological Measurement Unit}
