add MOG (micro-offline gain) and MSL (motor sequence learning) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -83,7 +83,9 @@
 \newacronym{MRI}{MRI}{magnetic resonance imaging}
 \newacronym[plural=ms,firstplural=milliseconds (ms)]{ms}{ms}{millisecond}
 \newacronym[plural=min,firstplural=minutes (min)]{min}{min}{minute}
+\newacronym{MOG}{MOG}{micro-offline gain}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
+\newacronym{MSL}{MSL}{motor sequence learning}
 \newacronym{MTL}{MTL}{medial temporal lobe}
 \newacronym{MTurk}{MTurk}{Amazon Mechanical Turk}
 \newacronym{MVPA}{MVPA}{multi-voxel pattern analysis}
