--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -9,6 +9,7 @@
 \newacronym{BIDS}{BIDS}{brain imaging data structure}
 \newacronym{BOLD}{BOLD}{blood-oxygen-level dependent}
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
+\newacronym{CI}{CI}{continuous integration}
 \newacronym{CLS}{CLS}{complementary learning systems}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
 \newacronym{DA}{DA}{dopamine}
