add BOBYQA (Bound Optimization BY Quadratic Approximation) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -7,6 +7,7 @@
 \newacronym{A-P}{A-P}{anterior-to-posterior}
 \newacronym{BET}{BET}{Brain Extraction Tool}
 \newacronym{BIDS}{BIDS}{brain imaging data structure}
+\newacronym{BOBYQA}{BOBYQA}{Bound Optimization BY Quadratic Approximation}
 \newacronym{BOLD}{BOLD}{blood-oxygen-level dependent}
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
 \newacronym{CI}{CI}{continuous integration}
