add meter (m) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -76,6 +76,9 @@
 \newacronym{LSTM}{LSTM}{long short-term memory}
 \newacronym{LTP}{LTP}{long-term potentiation}
 \newacronym{LTS}{LTS}{long-term support}
+\newacronym[plural=m,firstplural=meters (m)]{m}{m}{meter}
+\newacronym[plural=ms,firstplural=milliseconds (ms)]{ms}{ms}{millisecond}
+\newacronym[plural=min,firstplural=minutes (min)]{min}{min}{minute}
 \newacronym{MB}{MB}{multi-band}
 \newacronym{MDP}{MDP}{Markov decision process}
 \newacronym{MEG}{MEG}{magnetoencephalography}
@@ -83,8 +86,6 @@
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
 \newacronym{MPIB}{MPIB}{Max Planck Institute for Human Development}
 \newacronym{MRI}{MRI}{magnetic resonance imaging}
-\newacronym[plural=ms,firstplural=milliseconds (ms)]{ms}{ms}{millisecond}
-\newacronym[plural=min,firstplural=minutes (min)]{min}{min}{minute}
 \newacronym{MOG}{MOG}{micro-offline gain}
 \newacronym{MPRAGE}{MPRAGE}{Magnetization Prepared Rapid Gradient Echo}
 \newacronym{MSL}{MSL}{motor sequence learning}
@@ -131,6 +132,10 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{SR}{SR}{successor representation}
 \newacronym{SRI}{SRI}{stimulus-response interval}
 \newacronym{S-R}{S-R}{stimulus-response}
+\newglossaryentry{state}{
+  name={state},
+  description={A signal from the environment or an internal process that is relevant for an agent and either fully or partly available, mostly via perceptual processes}
+}
 \newacronym{STDP}{STDP}{spike timing dependent plasticity}
 \newacronym{SUSAN}{SUSAN}{Smallest Univalue Segment Assimilating Nucleus}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
