--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -6,7 +6,7 @@
 \newacronym{ANOVA}{ANOVA}{analysis of variance}
 \newacronym{A-P}{A-P}{anterior-to-posterior}
 \newacronym{BET}{BET}{Brain Extraction Tool}
-\newacronym{BIDS}{BIDS}{brain imaging data structure}
+\newacronym{BIDS}{BIDS}{Brain Imaging Data Structure}
 \newacronym{BOBYQA}{BOBYQA}{Bound Optimization BY Quadratic Approximation}
 \newacronym{BOLD}{BOLD}{blood-oxygen-level dependent}
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
