--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -140,6 +140,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{SUSAN}{SUSAN}{Smallest Univalue Segment Assimilating Nucleus}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
+\newacronym{TB}{TB}{terabyte}
 \newacronym{TD}{TD}{temporal difference}
 \newacronym{TE}{TE}{echo time}
 \newacronym{TI}{TI}{inversion time}
