add FFA and PPA to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -37,6 +37,7 @@
 \newacronym{FDR}{FDR}{false discovery rate}
 \newacronym{FA}{FA}{flip angle}
 \newacronym{FD}{FD}{framewise displacement}
+\newacronym{FFA}{FFA}{fusiform face area}
 \newacronym{FLAIR}{FLAIR}{fluid-attenuated inversion recovery}
 \newacronym{fMRI}{fMRI}{functional magnetic resonance imaging}
 \newacronym{FOV}{FOV}{field of view}
@@ -102,6 +103,7 @@
 \newacronym{PE}{PE}{prediction error}
 \newacronym{PFC}{PFC}{prefrontal cortex}
 \newacronym{PMU}{PMU}{Physiological Measurement Unit}
+\newacronym{PPA}{PPA}{parahippocampal place area}
 \newglossaryentry{PTSD}{
 name={PTSD},
 description={Post-traumatic stress disorder (PTSD) is a mental disorder that can develop after a person is exposed to a traumatic event, such as sexual assault, and can include a variety of symptoms like disturbing thoughts, feelings, and re-experiencing trauma-related events},
